# agent-demo-teamA

./: .env.example  .env.lightweight  .gitignore  .gitleaks.toml  README.en.md  README.md  STREAMLIT至Vue前端改版說明.md  agent_router.py  approval_workflow.py  chat_service.py  citecheck_client.py  competition_notes_contract_ai.md  contract_drafting.py  contract_risk_parser.py  document_processing.py  eval_log.py  eval_runs.jsonl  expert_agents.py  gavel_client.py  ingest_service.py  intent_detector.py  knowledge_base_jobs.py  knowledge_base_policy.py  knowledge_base_providers.py  knowledge_base_sync.py  llm_client.py  package-lock.json  progress.py  pyproject.toml  rag_chat.py  rag_common.py  rag_graph.py  rag_ingest.py  sources_registry.json  streamlit_app.py  進度.md
.streamlit/: config.toml
assets/: custom.css
backend/: README.md  __init__.py  config.py  exception_handlers.py  logging_config.py  main.py  rag_clients.py
contracts/: openapi.json
data/: sample_contract_NDA.txt
docs/: 2026智慧創新大賞_競賽須知對齊與專案分析.md  BM25_法條場景適用性分析.md  Demo_操作指南.md  FRONTEND_設計分析與優化建議.md  RAG_記憶與上下文.md  README.md  UX_CRITIQUE.md  competition_notes_contract_ai.md  update-summary-2026-04-15.md  update-summary-2026-04-17.md  合併後專案分析.md  合約審閱助理_痛點分析.md  專案分析_頂大與業界視角.md  專案檔案結構.md  專案與負責區塊完整度分析.md
eval/: eval_set.json  eval_set_contract.json  run_eval.py
frontend/: README.md
scripts/: deploy_contract_agent.sh  export_openapi.py  install_dgx_services.sh
tests/: test_admin_auth.py  test_admin_rate_limit.py  test_bm25_concurrency.py  test_chat_api.py  test_contract_risk_parser.py  test_document_processing.py  test_eval_api.py  test_health_route.py  test_ingest_api.py  test_knowledge_base_admin.py  test_law_refs.py  (+9 more)
(+88 files in other folders)
